--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,8 +30,9 @@ body {
   font-size: 18px;
   letter-spacing: .1em;
   background: var(--error);
-  color: var(--dark);
+  color: var(--light);
   font-family: 'Glacial Indifference';
+  background-color: var(--dark);
 
 }
 
@@ -86,3 +87,23 @@ a:hover {
   text-decoration: underline;
 }
 
+#text {
+  color: white;
+}
+
+#author {
+  color: var(--darker);
+  float: right;
+}
+
+.quote-button {
+    background-color: var(--error);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  
+}
