--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,6 +150,6 @@ a:hover {
 
 .subhead {
   font-family: 'Roboto', sans-serif;
-  background-color: var(--secondary);
+  background-color: var(--ter);
   font-size: 1.75rem;
 }
