--- a/client/src/App.css
+++ b/client/src/App.css
@@ -174,6 +174,8 @@ a:hover {
 #time {
   margin-top: 4rem;
   text-align: center;
+  color: var(--light);
+  background-color: rgb(0, 0, 0, .7);
 }
 
 .jumbotext {
@@ -194,4 +196,12 @@ a:hover {
 .foot a:hover {
   text-decoration: underline;
   font-weight: bold;
+}
+
+.modal-title {
+  color: var(--primary);
+  
+}
+.modal-body {
+  color: var(--primary);
 }
