--- a/client/src/App.css
+++ b/client/src/App.css
@@ -129,7 +129,21 @@ a:hover {
     font-size: 16px;  
 }
 
+.quote-button-quote {
+  background-color: var(--tertiary);
+  border: none;
+  color: var(--secondary);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;  
+}
 .quote-button:hover {
+  opacity: .75;
+}
+
+.quote-button-quote:hover {
   opacity: .75;
 }
 
