styled create account

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,7 +40,6 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-
 }
 
 
@@ -101,8 +100,9 @@ a:hover {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 9998;
+  z-index: 9997;
 }
+
 
 #text {
   color:var(--light);
@@ -165,13 +165,8 @@ a:hover {
 .subhead {
   font-family: 'Roboto', sans-serif;
   font-size: 1.75rem;
+  color: var(--primary);
 }
-
-
-.modal {
-  z-index: 9999;
-}
-
 
 #logo-box {
   margin-top: 7rem;
@@ -194,6 +189,8 @@ a:hover {
 
 .jumbotext {
   text-align: center;
+  color: var(--light);
+  font-weight: bold;
 }
 
 .foot {
@@ -218,4 +215,20 @@ a:hover {
 }
 .modal-body {
   color: var(--primary);
+}
+
+.modal {
+  z-index: 9999;
+}
+
+.signup-link {
+  color: var(--tertiary);
+  font-family: 'Roboto' sans-serif;
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+
+.signup-link:hover {
+  text-decoration: underline;
+  color: var(--tertiary);
 }
