new picture for login

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -222,13 +222,34 @@ a:hover {
 }
 
 .signup-link {
-  color: var(--tertiary);
+  color: var(--secondary);
   font-family: 'Roboto' sans-serif;
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-decoration: none;
 }
 
 .signup-link:hover {
   text-decoration: underline;
-  color: var(--tertiary);
+  color: var(--secondary);
+}
+
+#login-box {
+  background-color: rgb(255, 255, 255, .6);
+  margin-top: 4rem;
+  height: 34rem;
+}
+
+.login {
+  color: var(--secondary);
+  font-family: 'Roboto' sans-serif;
+  font-size: 5rem;
+  font-weight: bolder;
+}
+
+.words-box {
+  width: 60%;
+}
+
+.image-box {
+  width: 40%;
 }
