--- a/client/src/login.css
+++ b/client/src/login.css
@@ -58,6 +58,7 @@ body {
     background-color: rgb(255, 255, 255, .8);
     margin-top: 4rem;
     height: 34rem;
+    border-radius: 25px;
   }
   
   .login {
@@ -75,4 +76,7 @@ body {
   
 .dancer {
     width: 100%;
+    height: 32rem;
+    border-radius: 25px;
+    margin-top: 16px;
 }
