--- a/client/src/login.css
+++ b/client/src/login.css
@@ -60,6 +60,13 @@ body {
     height: 34rem;
     border-radius: 25px;
   }
+
+  #signup-box {
+    background-color: rgb(255, 255, 255, .8);
+    margin-top: 2rem;
+    height: 37rem;
+    border-radius: 25px;
+  }
   
   .login {
     color: var(--secondary);
@@ -70,6 +77,13 @@ body {
   
   .words-box {
     width: 60%;
+  }
+
+  #login-image {
+    width: 100%;
+    height: 36rem;
+    border-radius: 25px;
+    margin-top: 8px;
   }
 
   
