--- a/client/src/App.css
+++ b/client/src/App.css
@@ -95,6 +95,8 @@ a:hover {
   text-decoration: underline;
 }
 
+
+/*Beginning of Nav Stylings. Original immediately below.*/
 #nav {
   background-color: var(--primary);
   position: fixed;
@@ -103,6 +105,32 @@ a:hover {
   z-index: 9997;
 }
 
+/* Responsive stylings for navbar */
+@media screen and (max-width: 540px) {
+  #nav {
+    /* Hamburger Bar stuff*/
+    #nav:not(:first-child) {display: none;}
+  #nav {
+    float: right;
+    display: block;
+  
+}
+
+@media screen and (max-width: 540px) {
+  #nav.responsive {position: absolute;}
+  #nav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  #nav.responsive #navLink {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/*--------------------End NavBar Styles   -----------------------*/
 
 #text {
   color:var(--light);
